// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpdatesDropdown/> Loading (spinner visible) 1`] = `
<div>
  <div
    class="dropdown"
    data-testid="updates-dropdown"
  >
    <button
      class="nav-item btn btn-link"
      type="button"
    >
      <div
        class="spinner-border spinner-border-sm"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<UpdatesDropdown/> Updates awaiting - snapshot 1`] = `
<div>
  <div
    class="dropdown"
    data-testid="updates-dropdown"
  >
    <button
      class="nav-item btn btn-link"
      type="button"
    >
      <i
        class="fa fa-sync-alt fa-lg"
      />
    </button>
    <div
      class="dropdown-menu dropdown-menu-right"
    >
      <div
        class="dropdown-header"
      >
        <a
          href="/package-management/updates"
        >
          <h5>
            Approve Update
          </h5>
        </a>
      </div>
      <div
        class="dropdown-divider"
      />
      <span
        class="dropdown-item"
      >
        See details in 
        <a
          href="/reforis/package-management/updates"
        >
          Updates
        </a>
         page.
      </span>
      <div
        class="dropdown-item"
        id="updates-dropdown-actions"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          Install now
        </button>
        <button
          class="btn btn-warning"
          type="button"
        >
          Ignore
        </button>
      </div>
    </div>
  </div>
</div>
`;
